# Labs-for-SPbSPU-C-course-during-2019

./: .boost_location  .gitignore  .gitlab-ci.yml  Makefile  README.md  base-types.hpp  lab.exe.stackdump
A2/: main.cpp
Gusarov.Ilya/A1/: base-types.hpp  rectangle.cpp  shape.hpp
Ustinov.artyom/A1/: Circle.hpp  Rectangle.cpp
afanasiev.aleksey/A1/: base-types.hpp  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
afanasiev.aleksey/A2/: circle.cpp  main.cpp  rectangle.cpp  test-main.cpp
afanasiev.aleksey/common/: base-types.hpp  circle.cpp  circle.hpp  rectangle.cpp  rectangle.hpp  shape.hpp
akhmedov.abdulla/A1/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
akhmedov.abdulla/A2/: main.cpp  test-main.cpp
akhmedov.abdulla/common/: base-types.hpp  circle.cpp  circle.hpp  rectangle.cpp  rectangle.hpp  shape.hpp
alexandrov.denis/A1/: base-types.hpp  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
alexandrov.denis/A2/: main.cpp  test-main.cpp
alexandrov.denis/common/: base-types.hpp  circle.cpp  circle.hpp  rectangle.cpp  shape.hpp  (+1 more)
common/: circle.cpp  rectangle.cpp
frolov.nikita/: base-types.hpp  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp
golikov.george/A1/: CMakeLists.txt  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp
naumov.andrei/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  main.cpp
vlasenko.nataliia/: .boost_location.txt  CMakeLists.txt
(+1828 files in other folders)
